modifying Prism Schemas

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="password"
-POSTGRES_DB="linktree"
+NEXT_PUBLIC_PUBLIC_URL="localhost:3000"
 
 DATABASE_URL="postgresql://user:password@localhost:5432/linktree"
 
+AUTH_TRUST_HOST=true
 AUTH_SECRET="" # Added by `npx auth`. Read more: https://cli.authjs.dev
 
 AUTH_GOOGLE_ID=""
