feat: Add public user profile page

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL="postgresql://user:password@localhost:5432/linktree"
 
 AUTH_TRUST_HOST=true
 AUTH_SECRET="" # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXTAUTH_URL="http://localhost:3000"
 
 AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
