--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ yarn-error.log*
 .env
 # local env files
 .env*.local
+# production env files
+.env*.production
 
 # vercel
 .vercel
@@ -38,3 +40,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# docker
+docker-compose.yml
