--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "inversify": "^6.0.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
